# PaintRL

./: .gitignore  README.md  pyproject.toml
configs/: random_demo.yaml  train_sac.yaml
docs/superpowers/plans/: 2026-07-14-paint-train-cli.md
docs/superpowers/specs/: 2026-07-14-paint-train-cli-design.md
paint_rl/: __init__.py  config.py
paint_rl/cli/: __init__.py  train.py
paint_rl/envs/: __init__.py  triangle_paint_env.py
paint_rl/models/: __init__.py  cnn.py
paint_rl/training/: __init__.py  callbacks.py  replay_buffer.py
paint_rl/utils/: __init__.py  actions.py  demo.py  image.py
scripts/: __init__.py  random_demo.py  train_sac.py
tests/: test_actions.py  test_cnn_features.py  test_compact_replay_buffer.py  test_config.py  test_demo_utils.py  test_image_utils.py  test_random_demo.py  test_train_entry_point.py  test_train_sac.py  test_training_callbacks.py  test_triangle_paint_env.py
