[project]
name = "paint-rl"
version = "0.1.0"
description = "A minimal reinforcement learning painter that draws a target image with transparent triangles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.4.0",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
